--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -24,6 +24,9 @@
 
 body {
   margin: 0;
+  padding: 0;
+  max-width: 100vw;
+  
 }
 
 /**
@@ -348,4 +351,8 @@ template {
 
 [hidden] {
   display: none;
+}
+
+ul {
+  padding-inline-start: 0;
 }
